---------------------------------------------------------------------------------------------------
Version: 1.9.1
Date: 2022.09.22
  Changes:
    - Nuke craters more efficient, smaller water puddle
---------------------------------------------------------------------------------------------------
Version: 1.9.0
Date: 2022.09.18
  Changes:
    - Adaptive biters info tab added
    - More aggressive biter expansion
    - New worlds
---------------------------------------------------------------------------------------------------
Version: 1.8.1
Date: 2022.09.04
  Changes:
    - Nuke craters fill in more evenly/quickly with water
---------------------------------------------------------------------------------------------------
Version: 1.8.0
Date: 2022.09.02
  Changes:
    - Nuke craters!
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2022.08.19
  Changes:
    - Start moving to mod from scenario
    - Adaptive Biters!
  Optimisations:
    - Code tidying and cleanup.
---------------------------------------------------------------------------------------------------